SortableList and Comments style fixes, wrapped

--- a/src/styles/components/cardwrapper.scss
+++ b/src/styles/components/cardwrapper.scss
@@ -1,5 +1,6 @@
 .card-wrapper {
   border-radius: 5px 5px 0 0;
+  width: 100%;
   margin: .5rem 0;
   padding: 0;
 }
